# rust-kafka-debezium-demo

./: .env  .gitignore  Cargo.toml  RESOURCES.md  USAGE.md  build.gradle.kts  docker-compose.yml  settings.gradle.kts
app-claims-service/: Cargo.toml
app-claims-service/config/: application.yml
app-claims-service/migrations/: 1_claim.sql  1_create_claim_and_party_tables.sql  1_setup.sql  2_create_claims_outbox_table.sql
app-claims-service/src/: config.rs  main.rs  model.rs  proto_conversions.rs
app-claims-service/src/api/rest/: endpoints.rs  mod.rs  resources.rs  routing.rs
app-claims-service/src/common/: api.rs  error.rs  misc.rs  mod.rs  server.rs
app-claims-service/src/db/: claims.rs  events.rs  mod.rs  parties.rs
app-claims-service/src/service/: event_service.rs
app-claims-version-service/: Cargo.toml
app-claims-version-service/config/: application.yml
app-claims-version-service/src/: config.rs  main.rs
claims-core/: Cargo.toml  README.md
claims-core/src/: config.rs  lib.rs  shutdown.rs  tracing.rs
claims-core/src/kafka/: mod.rs  proto_consumer.rs
claims-core/src/kakfa/: proto_producer.rs
claims-core/src/proto_encode/: encoder.rs  message.rs  mod.rs
claims-model/: Cargo.toml  README.md
claims-model/src/model/: mod.rs  proto_conversions.rs
claims-schema/: .gitignore  Cargo.toml  README.md  build.rs
claims-schema-register/: Cargo.toml  README.md
claims-schema-register/src/: main.rs
claims-schema-setter/: .gitignore  build.gradle.kts
claims-schema/resources/proto/: claim.proto  party.proto
claims-schema/resources/protos/: claim.proto  claimStatus.proto  incidentType.proto
claims-schema/src/: lib.rs
conf/db-init/: 1-create_claims_schema.sql
conf/kafka-connect/: register-claims-postgres-connector.json  register-claims-postgres-no-schema-connector.json  register-claims-postgres-outbox-connector.json
conf/kafka-ui/: conf.yml
conf/kafka-ui/protos/: all.proto
examples/schema-registry-serialization/: Cargo.toml  README.md
examples/schema-registry-serialization/src/: main.rs  proto_consumer.rs  proto_producer.rs  record_producer.rs
postman/: kd-demo.postman_collection.json
proto-convert/: Cargo.toml  README.md  build.rs
proto-convert-core/: Cargo.toml
proto-convert-core/src/: attributes.rs  experimental.rs  impl_proto_convert.rs  lib.rs  proto_convert.rs  proto_convert_enum.rs  proto_convert_struct.rs  proto_enum.rs  proto_struct.rs
proto-convert-core/src/tests/: experimental_tests.rs  implement_enum_tests.rs  implement_struct_tests.rs  mod.rs  parse_enum_tests.rs  parse_struct_tests.rs  type_fold_tests.rs  type_scanner_tests.rs
proto-convert-core/src/types/: mod.rs  nested_type.rs  ty.rs  type_scanner.rs
proto-convert-core/tests/: experiment_tests.rs
proto-convert-derive/: Cargo.toml
proto-convert-derive/src/: lib.rs
proto-convert/src/: impl_proto_convert.rs  lib.rs  proto_convert.rs
proto-convert/tests/: enum_entity_tests.rs  experiment_tests.rs  manual_implementation_tests.rs  nested_entity_tests.rs  option_fields_tests.rs  simple_entity_tests.rs  struct_entity_attribute_tests.rs  struct_entity_tests.rs  struct_uuid_tests.rs  test.rs
proto-convert/tests/proto/: entities.proto  mod.rs
scripts/: publish-claims-schema.sh  publish-claims-schemas.sh  register-claims-outbox-connector.sh
