[workspace]
resolver = "2"
members = [
    "examples/*",
    "claims-core",
    "claims-schema",
    "claims-model",
    "proto-convert",
    "proto-convert-core",
    "proto-convert-derive",

    "app-claims-service",
    "app-claims-version-service"
]

default-members = [
    "claims-core",
    "claims-model",
    "claims-schema",
    "proto-convert",
    "proto-convert-core",
    "proto-convert-derive",
    "app-*"
]