[package]
name = "claims-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
config = { version = "0.13.3" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt", "json"] }

async-trait = "0.1.73"



rdkafka = "0.34.0"
protobuf = "3.2.0"
schema_registry_converter = {version  = "3.1.0" , features = ["easy", "proto_raw"]}