[package]
name = "claims-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
claims-schema = { path = "../claims-schema", optional = true }

sqlx = { version = "0.7.1", features = ["json", "uuid"], optional = true }
protobuf = { version = "3.2.0", optional = true }
anyhow = {version = "1.0.75", optional = true }
proto-mapper = { git = "https://github.com/fpaschos/proto-mapper.git", features = ["protobuf"], optional = true}
# Non optional dependences
strum = { version = "0.25.0", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }

[features]
proto = ["dep:claims-schema", "dep:proto-mapper", "dep:anyhow", "dep:protobuf"]
sqlx = ["dep:sqlx"]
