[package]
name = "claims-schema-register"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
claims-schema = { path = "../claims-schema"}
schema_registry_converter = { version = "3.1.0", features = ["blocking"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
