[package]
name = "schema-registry-serialization"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
claims-core = { path = "../../claims-core"}

anyhow = "1.0.75"
async-trait = "0.1.73"
bytes = "1.5.0"
claims-schema = { path = "../../claims-schema" }
futures = "0.3.28"
protobuf = "3.2.0"

rdkafka = "0.34.0"
schema_registry_converter = {version  = "3.1.0" , features = ["easy", "proto_raw"]}
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
